--- a/lugang/AndroidManifest.xml
+++ b/lugang/AndroidManifest.xml
@@ -8,6 +8,9 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.FLASHLIGHT" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -91,6 +94,10 @@
         </activity>
         <activity
             android:name="com.honglang.lugang.home.SettingActivity"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
+        </activity>
+        <activity
+            android:name="com.honglang.lugang.qrcode.HistoryActivity"
             android:theme="@android:style/Theme.Light.NoTitleBar" >
         </activity>
     </application>
