--- a/lugang/AndroidManifest.xml
+++ b/lugang/AndroidManifest.xml
@@ -100,6 +100,14 @@
             android:name="com.honglang.lugang.qrcode.HistoryActivity"
             android:theme="@android:style/Theme.Light.NoTitleBar" >
         </activity>
+        <activity
+            android:name="com.honglang.lugang.office.OrderActivity"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
+        </activity>
+        <activity
+            android:name="com.honglang.lugang.CountActivity"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
+        </activity>
     </application>
 
 </manifest>
