--- a/lugang/AndroidManifest.xml
+++ b/lugang/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.honglang.lugang"
+    android:installLocation="preferExternal"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -38,7 +39,7 @@
         <activity
             android:name="com.honglang.lugang.login.LoginActivity"
             android:theme="@android:style/Theme.Light.NoTitleBar"
-            android:windowSoftInputMode="adjustPan" >
+            android:windowSoftInputMode="adjustUnspecified|stateHidden|adjustResize" >
         </activity>
         <activity
             android:name="com.honglang.lugang.home.HomeActivity"
@@ -102,7 +103,8 @@
         </activity>
         <activity
             android:name="com.honglang.lugang.office.OrderActivity"
-            android:theme="@android:style/Theme.Light.NoTitleBar" >
+            android:windowSoftInputMode="adjustUnspecified|stateHidden|adjustResize"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
         </activity>
         <activity
             android:name="com.honglang.lugang.CountActivity"
