空白运单入库

--- a/lugang/AndroidManifest.xml
+++ b/lugang/AndroidManifest.xml
@@ -133,6 +133,16 @@
             android:name="com.honglang.lugang.qrcode.DriverActivity"
             android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
         </activity>
+        <activity
+            android:name="com.honglang.lugang.qrcode.BlankActivity"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar"
+            android:windowSoftInputMode="adjustUnspecified|stateHidden|adjustResize" >
+        </activity>
+        <activity
+            android:name="com.honglang.lugang.StuffActivity"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar"
+            android:windowSoftInputMode="adjustUnspecified|stateHidden|adjustResize" >
+        </activity>
     </application>
 
 </manifest>
