--- a/lugang/AndroidManifest.xml
+++ b/lugang/AndroidManifest.xml
@@ -43,7 +43,7 @@
         </activity>
         <activity
             android:name="com.honglang.lugang.home.HomeActivity"
-            android:theme="@style/StyledIndicators" >
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
         </activity>
         <activity
             android:name="com.honglang.lugang.cityexpress.ExpressActivity"
@@ -142,6 +142,18 @@
             android:name="com.honglang.lugang.StuffActivity"
             android:theme="@android:style/Theme.Holo.Light.NoActionBar"
             android:windowSoftInputMode="adjustUnspecified|stateHidden|adjustResize" >
+        </activity>
+        <activity
+            android:name="com.honglang.lugang.office.DealingActivity"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
+        </activity>
+        <activity
+            android:name="com.honglang.lugang.office.DoneActivity"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
+        </activity>
+        <activity
+            android:name="com.honglang.lugang.login.UserActivity"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
         </activity>
     </application>
 
