--- a/lugang/AndroidManifest.xml
+++ b/lugang/AndroidManifest.xml
@@ -204,6 +204,11 @@
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
         </activity>
+        <activity
+            android:name="com.honglang.lugang.issue.IssueStuffActivity"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
+        </activity>
     </application>
 
 </manifest>
