--- a/lugang/AndroidManifest.xml
+++ b/lugang/AndroidManifest.xml
@@ -24,7 +24,7 @@
     <application
         android:name="com.honglang.lugang.HlApp"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -207,7 +207,8 @@
         <activity
             android:name="com.honglang.lugang.issue.IssueStuffActivity"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar"
+            android:windowSoftInputMode="adjustUnspecified|stateHidden|adjustResize" >
         </activity>
     </application>
 
