配货单查询

--- a/lugang/AndroidManifest.xml
+++ b/lugang/AndroidManifest.xml
@@ -225,6 +225,12 @@
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
         </activity>
+        <activity
+            android:name="com.honglang.lugang.out.SearchFormActivity"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar"
+            android:windowSoftInputMode="adjustUnspecified|stateHidden|adjustResize" >
+        </activity>
     </application>
 
 </manifest>
